--- a/nginx-proxy/nginx.tmpl
+++ b/nginx-proxy/nginx.tmpl
@@ -238,6 +238,20 @@ server {
         }
 }
 
+server {
+		server_name {{ $host }};
+		listen 80 {{ $default_server }};;
+        access_log /var/log/nginx/access.log vhost;
+        error_page 502 /502.html;
+        location = /502.html {
+                root /usr/share/nginx/html;
+                internal;
+        }
+		location / {
+                return 502;
+        }
+}
+
 {{ if (and (exists "/etc/nginx/certs/default.crt") (exists "/etc/nginx/certs/default.key")) }}
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
